package pattern;

public class ConfigurationLoader {
    public void load() { System.out.println("Configuracion cargada"); }
}
