package pattern;

public class Database {
    public void connect() { System.out.println("Base de datos conectada"); }
}
