package pattern;

public class Logger {
    public void start() { System.out.println("Logger iniciado"); }
}
